--- a/casas html/act 2 casas html/act 3/index.html
+++ b/casas html/act 2 casas html/act 3/index.html
@@ -90,7 +90,82 @@
                                                                                 Corporis nisi, molestias assumenda excepturi exercitationem
                                                                                 enim voluptatem! Fugit sequi, veritatis optio non labore libero,
                                                                                  beatae recusandae esse ex illo, eius molestias.</p>
-
+ <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+        Corporis nisi, molestias assumenda excepturi exercitationem
+        enim voluptatem! Fugit sequi, veritatis optio non labore libero,
+         beatae recusandae esse ex illo, eius molestias.</p>
+         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+            Corporis nisi, molestias assumenda excepturi exercitationem
+            enim voluptatem! Fugit sequi, veritatis optio non labore libero,
+             beatae recusandae esse ex illo, eius molestias.</p>
+             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                Corporis nisi, molestias assumenda excepturi exercitationem
+                enim voluptatem! Fugit sequi, veritatis optio non labore libero,
+                 beatae recusandae esse ex illo, eius molestias.</p>
+                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                    Corporis nisi, molestias assumenda excepturi exercitationem
+                    enim voluptatem! Fugit sequi, veritatis optio non labore libero,
+                     beatae recusandae esse ex illo, eius molestias.</p>
+                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                        Corporis nisi, molestias assumenda excepturi exercitationem
+                        enim voluptatem! Fugit sequi, veritatis optio non labore libero,
+                         beatae recusandae esse ex illo, eius molestias.</p>
+                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                            Corporis nisi, molestias assumenda excepturi exercitationem
+                            enim voluptatem! Fugit sequi, veritatis optio non labore libero,
+                             beatae recusandae esse ex illo, eius molestias.</p>
+                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                                Corporis nisi, molestias assumenda excepturi exercitationem
+                                enim voluptatem! Fugit sequi, veritatis optio non labore libero,
+                                 beatae recusandae esse ex illo, eius molestias.</p>
+                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                                    Corporis nisi, molestias assumenda excepturi exercitationem
+                                    enim voluptatem! Fugit sequi, veritatis optio non labore libero,
+                                     beatae recusandae esse ex illo, eius molestias.</p>
+                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                                        Corporis nisi, molestias assumenda excepturi exercitationem
+                                        enim voluptatem! Fugit sequi, veritatis optio non labore libero,
+                                         beatae recusandae esse ex illo, eius molestias.</p>
+                                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                                            Corporis nisi, molestias assumenda excepturi exercitationem
+                                            enim voluptatem! Fugit sequi, veritatis optio non labore libero,
+                                             beatae recusandae esse ex illo, eius molestias.</p>
+                                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                                                Corporis nisi, molestias assumenda excepturi exercitationem
+                                                enim voluptatem! Fugit sequi, veritatis optio non labore libero,
+                                                 beatae recusandae esse ex illo, eius molestias.</p>
+                                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                                                    Corporis nisi, molestias assumenda excepturi exercitationem
+                                                    enim voluptatem! Fugit sequi, veritatis optio non labore libero,
+                                                     beatae recusandae esse ex illo, eius molestias.</p>
+                                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                                                        Corporis nisi, molestias assumenda excepturi exercitationem
+                                                        enim voluptatem! Fugit sequi, veritatis optio non labore libero,
+                                                         beatae recusandae esse ex illo, eius molestias.</p>
+                                                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                                                            Corporis nisi, molestias assumenda excepturi exercitationem
+                                                            enim voluptatem! Fugit sequi, veritatis optio non labore libero,
+                                                             beatae recusandae esse ex illo, eius molestias.</p>
+                                                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                                                                Corporis nisi, molestias assumenda excepturi exercitationem
+                                                                enim voluptatem! Fugit sequi, veritatis optio non labore libero,
+                                                                 beatae recusandae esse ex illo, eius molestias.</p>
+                                                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                                                                    Corporis nisi, molestias assumenda excepturi exercitationem
+                                                                    enim voluptatem! Fugit sequi, veritatis optio non labore libero,
+                                                                     beatae recusandae esse ex illo, eius molestias.</p>
+                                                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                                                                        Corporis nisi, molestias assumenda excepturi exercitationem
+                                                                        enim voluptatem! Fugit sequi, veritatis optio non labore libero,
+                                                                         beatae recusandae esse ex illo, eius molestias.</p>
+                                                                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                                                                            Corporis nisi, molestias assumenda excepturi exercitationem
+                                                                            enim voluptatem! Fugit sequi, veritatis optio non labore libero,
+                                                                             beatae recusandae esse ex illo, eius molestias.</p>
+                                                                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                                                                                Corporis nisi, molestias assumenda excepturi exercitationem
+                                                                                enim voluptatem! Fugit sequi, veritatis optio non labore libero,
+                                                                                 beatae recusandae esse ex illo, eius molestias.</p>
    </div>
    <div>
     <h1 id="parte2">Esta es la parte de abajo de la página</h1>
