--- a/casas html/act 2 casas html/act 6/Formulario.html
+++ b/casas html/act 2 casas html/act 6/Formulario.html
@@ -8,17 +8,17 @@
     <h1>Rellena tu CV</h1>
     <div>
         <form>
-            <label for="nombre">Nombre</label><br>
-            <input type="text" id="Nombre" name="Nombre"><br>
+            <label for="Nombre">Nombre</label><br>
+            <input type="text" id="Nombre" name="Nombre" maxlength="30"><br>
 
-            <label for="apellidos">Apellidos</label><br>
-            <input type="text" id="Apellidos" name="Apellidos"><br>
+            <label for="Apellidos">Apellidos</label><br>
+            <input type="text" id="Apellidos" name="Apellidos" size="50" maxlength="80"><br>
 
-            <label for="contraseña">contraseña</label><br>
-            <input type="password" id="Contraseña" name="Contraseña"><br>
+            <label for="Contraseña">Contraseña</label><br>
+            <input type="password" id="Contraseña" name="Contraseña" maxlength="10"><br>
 
             <label for="dni">DNI</label><br>
-            <input type="number" id="Dni" name="Dni"><br>
+            <input input type="text" id="dni" name="dni" pattern="[0-9]{8}" maxlength="8" inputmode="numeric" required><br>
           </form> 
     </div>
     <div>
@@ -33,6 +33,20 @@
     <div>
         <label>Incluir mi foto</label>
         <input type="file" >
+    </div>
+    <br>
+    <div>
+        <form>
+            <input type="checkbox" id="SuscribirmE" name="vehicle1" value="Suscribirme" input: checked="checked">
+            <label for="Suscribirme">Suscribirme al Boletín de novedades</label><br>
+        </form>
+    </div>
+    <br>
+    <div>   
+        <form>
+            <button type="submit">Guardar cambios</button>
+            <button type="reset">Borrar los datos introducidos</a></button>
+        </form>
     </div>
 </body>
 </html>
